# tt-metal

./: .#log  .bash_history  .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-light  .clangd  .claude  .codechecker.json  .codechecker.skiplist  .codespellignore  .codex  .coverage  .device_timing.jsonl  .dockerignore  .gdbinit  .gersemirc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .namespace_claude_exceptions  .namespace_claude_progress  .nanobind_fix_exceptions  .nanobind_fix_progress  .operation_type_naming_exceptions  .operation_type_naming_progress  .pre-commit-config.yaml  .py  .return_value_alias_fix_exceptions  .return_value_alias_fix_progress  .yamllint  .yamllint.yml  1x4_p300_mesh_graph_desc.yaml  2  2.5d_torus_cabling_desc.textproto  2xp300_phys_topology.yaml  5_6u_physical_system_descriptor.yaml  5_t3k_physical_desc.yaml  5x8x16_fsd.textproto  (+1518 more)
dependencies/: CMakeLists.txt  json.patch  yaml-cpp.patch
evans_projects/addition_riscv/: CMakeLists.txt  add_in_riscv.cpp
models/mobilenetv2_cpp/: CMakeLists.txt  README.md  helper_funcs.cpp  helper_funcs.h  ttnn_mobilenetv2.cpp  ttnn_mobilenetv2.h
models/vllm_tt/: pyproject.toml
native/: CMakeLists.txt  main.cpp
native/kernels/: uniform.cpp  writer.cpp
scaleout_tools/: CMakeLists.txt
scaleout_tools/tests/: test_factory_system_descriptor.cpp
test-run/: CMakeLists.txt  README_DEBUG.md  test_1x32_all_gather_debug.cpp  test_1x32_mesh_device.py  utils.py
tests/: .clang-tidy  .gitignore  CMakeLists.txt  LOGGING.md  Makefile  README-shared-fixtures.md  README.md  benchmark.py  conftest.py  files.txt  module.mk  open_device.py  requirements.txt  setup_clangd.sh  setup_env.sh  setup_external_testing_env.sh  setup_sfpi.sh  setup_testing_env.sh  sfpi-info.sh  sfpi-version  sfpi-version.sh  test_distributed_layernorm_ulp.py  test_distributed_norm_OOM.py  test_fused_ag_mm_8k_grid_sweep.py  test_fused_ag_mm_w2.py  test_fused_mm_rs_galaxy.py  test_fused_muladd.py  test_matmul.py  test_nlp_create_heads_repro.py  test_quasar_conv.py  test_quasar_transpose_subtile_dfb_hang.py  test_sigmoid_ulp.py  test_softplus_ulp.py  test_ttnn_rms_norm_comparison.py  test_unit.py
tests/.github/: t3k_test_groups.json
tests/cmake/: CMakeLists.txt  README.md  test_distro_detection.py  test_mpi_configuration.py
tests/configs/: cnn_javelin_perf_tests_wormhole_b0.json  device_perf_tests_wh_civ2.json  device_perf_tests_wh_legacy.json  llm_javelin_perf_tests_wormhole_b0.json  other_perf_tests_wormhole_b0.json
tests/didt/: CMakeLists.txt  README.md  deepseek_v3_matmul_config.py  matmul_test_base.py  op_test_base.py  op_test_base_multi.py  process_profiler_output.py  sweep_deepseek_v3_matmul_tune.py  sync_analysis.py  sync_analysis_bh.py  test_binary_mul.py  test_cos_simple.py  test_deepseek_v3_128k_matmul.py  test_deepseek_v3_matmul_pcc.py  test_dram_sharded_then_1d_matmul.py  test_duty_cycle.py  test_eltwise.py  test_ff1_matmul.py  test_lm_head_matmul.py  test_max.py  test_minimal_matmul.py  test_mla_sdpa.py  test_mm_after_non_mm.py  test_resnet_conv.py  test_sdpa_op.py  test_sdxl_attn_matmul.py  test_sdxl_conv.py  test_sdxl_conv_1280x1280_resnet.py  test_sdxl_conv_1280x1280_upsample.py  test_sdxl_conv_1280x1920.py  test_sdxl_conv_1280x2560.py  test_sdxl_ff_matmul.py  test_sdxl_geglu_matmul.py  test_sdxl_matmul.py  test_sdxl_resnet_matmul_1280x2560.py  test_sdxl_resnet_matmul_1280x640.py  test_sdxl_vae_conv_1024_upsample.py  test_sdxl_vae_conv_256_upsample.py  test_sdxl_vae_conv_256x256.py  test_sdxl_vae_conv_256x512.py  (+7 more)
tests/emule/: CMakeLists.txt
tests/end_to_end_tests/: conftest.py  pytest.ini  requirements.txt  test_host_side_api.py  test_socket_bindings.py  test_ttnn.py  test_unit_ops.py
tests/generalize/: README.md  matmul_sweep.py
tests/helpers/: find_arch.py  tmu-crt0.S
tests/matmul_decode_bench/: __init__.py  conftest.py  extract_all.sh  extract_perf.py  profile_chunked_prefill_nopatch_stages.py  profile_native_explicit_sweep_stages.py  profile_unified_mmsweep_stages.py  run_golden_repro.sh  run_mmd13_driver.sh  run_sweep.sh
tests/mock_ccl_support/: metal_env_mock_ccl_test_helper.cpp  (+1 more)
tt-train/: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  BUG_ttnn_subtract_fp32_hang.md  CMakeLists.txt  CODEOWNERS  INSTALL.md  INSTALLING.md  LICENSE  PR_DESCRIPTION_CONFIG_PATHS.md  PR_FIX_POLYNORM_BW_BLOCK_SIZE_NON4.md  PR_REMOVE_UNUSED_SWIGLU_MCAST_HELPERS.md  PULL_REQUEST_TEMPLATE.md  README.md  bug_report_untilize_blackhole.md  build_all.sh  generate_tokens.py  grpo_implementation_wip.txt  init_repo.sh  probe.sh  probe_1d.sh  pyproject.toml  run_profiler.sh  test_pci.py
tt_eager/: CMakeLists.txt  module.mk  tracy.py  tracy_tt_lib.py  tt_lib_profiler_wrapper.py
tt_emule/: CMakeLists.txt
tt_fabric/: CMakeLists.txt  control_plane.cpp  control_plane.hpp  mesh_graph.cpp  mesh_graph.hpp  routing_table_generator.cpp  routing_table_generator.hpp
tt_metal/: .clang-tidy  CMakeLists.txt  Glossary of Terms.md  Glossary.md  README.md  TT-Metalium_for_Beginners.md  graph_tracking.cpp  graph_tracking.hpp  hal.cpp  host_api.hpp  lwt_accelerator.cpp  metrics_demo.cpp  module.mk  new_llk.txt  pch.hpp  public_pch.hpp  sfpi-info.sh  sfpi-version  sfpi-version.sh  sources.cmake  test_clang_tidy_violation.cpp  tracy.mk  tt_metal.cpp  tt_metal.cpp.orig  ttsim-version  visualize.py
tt_stl/: .clang-tidy  CMakeLists.txt
tt_telemetry/: CMakeLists.txt  Dockerfile  Dockerfile.README.md  README.md  dev-shell.sh  run_telemetry_server.sh  websocketpp_cpp_cleanup.patch
ttnn/: .clang-tidy  CMakeLists.txt  Conan.md  OperationTracing.md  README.md  __init__.py  binary.py  common.py  complex.py  conv.py  core.py  createops.py  data_movement.py  decorators.py  experimental.py  max_pool.py  model_preprocessing.py  module.mk  nlp.py  normalization.py  pch.hpp  pybind_pch.hpp  relational.py  serve_wasm.py  setup.py  setup_ttlib.py  setup_ttnn.py  sources.cmake  tensor.py  ternary.py  test_legacy_ci.hpp  transformer.py  ttnn_core_pch.hpp  ttnn_pch.hpp  ttnncpp_pch.hpp  unary.py
(+101665 files in other folders)
